/**
 * Copyright (C) 2019 Unicorn a.s.
 * 
 * This program is free software; you can use it under the terms of the UAF Open License v01 or
 * any later version. The text of the license is available in the file LICENSE or at www.unicorn.com.
 * 
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
 * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See LICENSE for more details.
 * 
 * You may contact Unicorn a.s. at address: V Kapslovne 2767/2, Praha 3, Czech Republic or
 * at the email: info@unicorn.com.
 */

import React from 'react';
import {shallow} from 'enzyme';
import UU5 from "uu5g04";
import "uu5g04-bricks";
import enzymeToJson from 'enzyme-to-json';
import TestTools from "../../core/test/test-tools.js";
import createReactClass from "create-react-class";

const MyDropDownHandlers = createReactClass({

  getInitialState: () => {
    return {
      isCalled: false
    };
  },

  onClickHandler(event) {
    alert("You Clicked to DropDown.Item");
    this.setState({isCalled: true})
  },
  render() {
    return (
      <UU5.Bricks.Dropdown
        id={"dropID"}
        label="onClickEvent"
        size="l"
        colorSchema="pink"
      >
        <UU5.Bricks.Dropdown.Item id={"itemID"} label="{user name}" header onClick={this.onClickHandler}/>
      </UU5.Bricks.Dropdown>
    );
  }
});

const TagName = "UU5.Bricks.Dropdown.Item";

const CONFIG = {
  mixins: [
    "UU5.Common.BaseMixin",
    "UU5.Common.ElementaryMixin",
    "UU5.Common.ContentMixin",
    "UU5.Common.PureRenderMixin",
    "UU5.Common.NestingLevelMixin"
  ],
  props: {
    header: {
      values: [true, false]
    },
    diviner: {
      values: [true, false]
    },
    label: {
      values: ["Label items"]
    },
    href: {
      values: ["https://www.plus4u.net/", "#elementID"]
    },
    //onClick
    smoothScroll: {
      values: [3000]
    },
    offset: {
      values: [70]
    },
    target: {
      values: ["_blank", "_parent", "_top", "_self"]
    },
    dropup: {
      values: [true, false]
    }
  },
  requiredProps: {
    parent: shallow(<UU5.Bricks.Dropdown id="parentId" />).instance()
  },
  opt: {
    shallowOpt: {
      disableLifecycleMethods: false
    },
    enzymeToJson: true
  }
};

describe(`${TagName}`, () => {
  TestTools.testProperties(TagName, CONFIG);
});

describe(`${TagName}`, () => {

  it(`${TagName} - onClick()`, () => {
    window.alert = jest.fn();
    const wrapper = shallow(
      <MyDropDownHandlers/>
    );
    expect(wrapper).toMatchSnapshot();
    expect(wrapper.state().isCalled).toBeFalsy();
    wrapper.find('dropdown-item').simulate('click');
    expect(window.alert).toBeCalled();
    expect(window.alert).toHaveBeenCalledWith('You Clicked to DropDown.Item');
    expect(wrapper.state().isCalled).toBeTruthy();
    expect(window.alert.mock.calls[0][0]).toEqual("You Clicked to DropDown.Item");
    expect(wrapper).toMatchSnapshot();
  });

});


describe(`${TagName} docKit examples`, () => {
  it(`${TagName} example make snapshot`, () => {
    const wrapper = shallow(
      <UU5.Bricks.Dropdown id={"uuID"} label="User account" size="l" colorSchema="green" iconClosed="mdi-eye">
        <UU5.Bricks.Dropdown.Item ref_={item => this.item = item} id={"uuID2"} label="{user name}" header/>
      </UU5.Bricks.Dropdown>
    );
    expect(enzymeToJson(wrapper)).toMatchSnapshot();
  });
});










