// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Dropdown.Item UU5.Bricks.Dropdown.Item - onClick() 1`] = `
<Dropdown
  allowTags={Array []}
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  buttonProps={null}
  className={null}
  closedOnLeave={false}
  colorSchema="pink"
  content={null}
  controlled={true}
  disableBackdrop={false}
  disabled={false}
  dropup={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  iconClosed="mdi-menu-down"
  iconHidden={false}
  iconOpen="mdi-menu-down"
  id="dropID"
  ignoreInnerHTML={false}
  items={Array []}
  label="onClickEvent"
  mainAttrs={null}
  menuClassName={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={null}
  onClick={null}
  openOnHover={false}
  pullRight={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="l"
  smoothScroll={1000}
  split={false}
  splitButtonProps={null}
  style={null}
  tooltip={null}
>
  <dropdown-item
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    divider={false}
    dropup={false}
    dynamic={false}
    header={true}
    hidden={false}
    href={null}
    id="itemID"
    ignoreInnerHTML={false}
    label="{user name}"
    linkProps={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</Dropdown>
`;

exports[`UU5.Bricks.Dropdown.Item UU5.Bricks.Dropdown.Item - onClick() 2`] = `
<Dropdown
  allowTags={Array []}
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  buttonProps={null}
  className={null}
  closedOnLeave={false}
  colorSchema="pink"
  content={null}
  controlled={true}
  disableBackdrop={false}
  disabled={false}
  dropup={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  iconClosed="mdi-menu-down"
  iconHidden={false}
  iconOpen="mdi-menu-down"
  id="dropID"
  ignoreInnerHTML={false}
  items={Array []}
  label="onClickEvent"
  mainAttrs={null}
  menuClassName={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={null}
  onClick={null}
  openOnHover={false}
  pullRight={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="l"
  smoothScroll={1000}
  split={false}
  splitButtonProps={null}
  style={null}
  tooltip={null}
>
  <dropdown-item
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    divider={false}
    dropup={false}
    dynamic={false}
    header={true}
    hidden={false}
    href={null}
    id="itemID"
    ignoreInnerHTML={false}
    label="{user name}"
    linkProps={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</Dropdown>
`;

exports[`UU5.Bricks.Dropdown.Item checkGrammar 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkGrammar 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkGrammar 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkGrammar 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkHighlight 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkHighlight 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkHighlight 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkHighlight 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkSpaces 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkSpaces 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkSpaces 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkSpaces 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item className 1`] = `
<li
  className="uu5-bricks-dropdown-item my-classname"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item content 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</li>
`;

exports[`UU5.Bricks.Dropdown.Item content 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item content 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item content 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</li>
`;

exports[`UU5.Bricks.Dropdown.Item controlled 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item controlled 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item controlled 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item controlled 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item default props 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item disabled 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-disabled disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={true}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item disabled 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item disabled 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item disabled 4`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-disabled disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={true}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item diviner 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item diviner 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item diviner 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item diviner 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item docKit examples UU5.Bricks.Dropdown.Item example make snapshot 1`] = `
<div
  className="color-schema-green uu5-bricks-dropdown uu5-bricks-dropdown-dropdown uu5-bricks-dropdown-dropdown"
  id="uuID"
  onMouseLeave={null}
  onMouseOver={null}
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-dropdown-button-cover"
    id="uuID-cover"
  >
    <Button
      baseline={false}
      bgStyle="filled"
      borderRadius={null}
      className="uu5-bricks-dropdown-button"
      colorSchema="green"
      content={
        Array [
          "User account",
          <Icon
            authenticate={false}
            className={null}
            clickable={true}
            controlled={true}
            disabled={false}
            hidden={false}
            icon="mdi-eye"
            id={null}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            src=""
            style={null}
            tooltip={null}
          />,
        ]
      }
      controlled={true}
      disabled={false}
      displayBlock={false}
      dynamic={false}
      elevation={null}
      elevationHover={null}
      hidden={false}
      href={null}
      id={null}
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      offset={0}
      onClick={[Function]}
      pressed={false}
      pureRender={false}
      ref_={null}
      selected={false}
      size="l"
      smoothScroll={1000}
      style={null}
      target="_self"
      tooltip={null}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Dropdown.Item dropup 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dropup 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dropup 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dropup 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dynamic 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dynamic 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dynamic 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dynamic 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item header 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-bricks-dropdown-item-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Span
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item header 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item header 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item header 4`] = `
<li
  className="uu5-bricks-dropdown-item uu5-bricks-dropdown-item-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Span
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item hidden 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item hidden 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item hidden 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item hidden 4`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item href 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="https://www.plus4u.net/"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item href 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#elementID"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item href 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#elementID"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item href 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="https://www.plus4u.net/"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item id 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="myId"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item ignoreHTML 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item ignoreHTML 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item ignoreHTML 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item ignoreHTML 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item label 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content="Label items"
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item mainAttrs 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item name 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  name="myName"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 5`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 6`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 7`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 8`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 9`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 10`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 11`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 12`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 13`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 14`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 15`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 16`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 17`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 18`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 19`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel 20`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item noIndex 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-noindex"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item noIndex 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item noIndex 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item noIndex 4`] = `
<li
  className="uu5-bricks-dropdown-item uu5-noindex"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item offset 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={70}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item pureRender 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item pureRender 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item pureRender 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item pureRender 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item selected 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-selected"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item selected 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item selected 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item selected 4`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-selected"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item smoothScroll 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={3000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item style 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item style 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item style 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item style 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_blank"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_parent"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_parent"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_top"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target 5`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_top"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target 6`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target 7`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target 8`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_top"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item textCorrector 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item textCorrector 2`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item textCorrector 3`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item textCorrector 4`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item tooltip 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title="My Tooltip"
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;
